# zammad-mcp-server

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: docker-publish.yml  workflow.yml
docker/: .env.example  README.md  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  COMPATIBILITY.md  DEPLOYMENT.md  PYPI.md
src/zammad_mcp_server/: __init__.py  access_control.py  client.py  models.py  server.py
tests/: conftest.py  test_access_control.py  test_client.py  test_models.py  test_server.py  test_time_accounting.py
