[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zammad-mcp-server"
version = "0.1.0"
description = "A powerful Model Context Protocol (MCP) server for Zammad ticket system"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Softoft", email = "tobias.bueck@openticketai.com" },
]
maintainers = [
    { name = "Softoft", email = "tobias.bueck@openticketai.com" },
]
keywords = ["mcp", "zammad", "tickets", "ai", "claude", "helpdesk", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "zammad-py>=0.2.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "cachetools>=5.3.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "mypy>=1.9.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
zammad-mcp-server = "zammad_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/Softoft-Orga/zammad-mcp-server"
Repository = "https://github.com/Softoft-Orga/zammad-mcp-server"
Documentation = "https://github.com/Softoft-Orga/zammad-mcp-server#readme"
Issues = "https://github.com/Softoft-Orga/zammad-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/zammad_mcp_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=zammad_mcp_server --cov-report=term-missing --cov-report=html:htmlcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["src/zammad_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
